<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/sound_category_title">
        <CheckBoxPreference
                android:key="sound_preference"
                android:title="@string/title_sound_preference"
                android:summary="@string/summary_sound_preference"
                android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/operation_category_title">
        <CheckBoxPreference
                android:key="newitemselected_preference"
                android:title="@string/title_newitemselected_preference"
                android:summary="@string/summary_newitemselected_preference"
                android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/randomnumber_category_title">
        <CheckBoxPreference
                android:key="randomorg_preference"
                android:title="@string/title_randomorg_preference"
                android:summary="@string/summary_randomorg_preference"
                android:defaultValue="false"/>
    </PreferenceCategory>

</PreferenceScreen>