<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/edit_item_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout android:layout_gravity="center_horizontal"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <EditText
                android:id="@+id/item_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/item_name_hint"/>

        <Spinner
                android:id="@+id/item_icon_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

        <android.support.v7.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

        <android.support.v7.widget.GridLayout
                android:id="@+id/dice_chooser_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center">
            <!--is filled programmatically with dice-icons and numberpickers-->
        </android.support.v7.widget.GridLayout>

        <LinearLayout
                android:id="@+id/dialog_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/button_ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/button_ok"/>

            <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/button_cancel"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>